@@ -1,3 +1,7 @@
+2013-03-28  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	* doc/Makefile.am: Add a missing dependency.
+
 2013-03-27  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	* configure.ac: Allow tarballs with long filenames.
